@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-17T16:17:05Z",
+  "timestamp" : "2022-04-20T08:19:13Z",
   "count_outdated" : 0,
   "uniques_outdated" : 0,
-  "count" : 14,
-  "uniques" : 8,
+  "count" : 15,
+  "uniques" : 9,
   "clones" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
@@ -14,6 +14,13 @@
     },
     {
       "timestamp": "2022-04-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
