@@ -1,6 +1,6 @@
 {
-  "count": 14,
-  "uniques": 8,
+  "count": 15,
+  "uniques": 9,
   "clones": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
@@ -9,6 +9,11 @@
     },
     {
       "timestamp": "2022-04-17T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
