@@ -1,3 +1,9 @@
+2022-04-20T08:19:13Z:
+* notice: last 14d: all unq: 15 9
+* notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 14 8
+* notice: next accum: outdated-all outdated-unq / all unq: 0 0 / 15 9
+* notice: prev json diff // prev day diff: unq all: +1 +1 / -0 -0 // +1 +1 / -0 -0
+
 2022-04-17T16:17:05Z:
 * notice: last 14d: all unq: 14 8
 * notice: prev accum: outdated-all outdated-unq / all unq: 0 0 / 13 7
